versions/1.20.4/translated/ru_ru/players/updating-fabric.md
---
title: Обновление Fabric
description: Пошаговая инструкция по обновлению Fabric.
authors:
  - IMB11
  - modmuss50

search: false
---

# Обновление Fabric

В этом гайде мы расскажем вам об обновлении Fabric на официальном лаунчере Minecraft.

Для сторонних лаунчеров вам следует ознакомиться с их документацией.

Обновление Fabric - это процесс, очень похожий на установку Fabric, поэтому части этого гайда будут такими же, как и в гайде [Установка Fabric](./installing-fabric).

## Почему я должен обновлять загрузчик Fabric?

Для работы с новыми модами может потребоваться более новая версия загрузчика Fabric, поэтому важно поддерживать её в актуальном состоянии, чтобы вы могли использовать последние версии модов.

<!-- Include steps from installing guide, no need to repeat them. -->

<!--@include: ./installing-fabric.md{12,41}-->

Чтобы обновить Fabric, просто убедитесь в правильности версии игры и загрузчика, а затем нажмите `Установить`.

**Обязательно снимите флажок `Создать профиль` при установке, иначе появится новый профиль, который в данном случае нам не нужен.**

## 3. Откройте профиль в лаунчере Minecraft

Как только установка завершится, вы можете открыть лаунчер Minecraft и перейти во вкладку `Установки`. Вам следует зайти в профиль Fabric и открыть экран редактирования.

Замените версию загрузчика на новую, которую вы только что установили, и нажмите `Сохранить`.

![Обновление версии загрузчика Fabric в лаунчере Minecraft](/assets/players/updating-fabric.png)

## 4. Готово!

Как только вы выполните все действия, вы можете вернуться в главную вкладку, выбрать профиль Fabric из списка в левом нижнем углу и нажать Играть!

Если вы столкнулись с какими-либо проблемами, попросите помощи в [дискорде Fabric](https://discord.gg/v6v4pMv) в канале `#player-support`.
